--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: pro-max-jarvis
     env: python
     buildCommand: "pip install -r requisitos.txt"
-    startCommand: "python aplicativo.py"
+    startCommand: "gunicorn app:app"
     plan: free
     branch: principal
     autoDeploy: true
