--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
-render.yaml
 services:
   - type: web
     name: pro-max-jarvis
     env: python
-    buildCommand: "pip install -r requisitos.txt"
-    startCommand: "gunicorn app:app"
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn aplicativo:app"
     plan: free
     branch: principal
     autoDeploy: true
